--- a/src/app/home/personal/mypage/info/info.component.tns.scss
+++ b/src/app/home/personal/mypage/info/info.component.tns.scss
@@ -1,1 +1,69 @@
 /* Add mobile styles for the component here.  */
+.info-container{
+    padding: 20;
+    margin-bottom: 50;
+    > Label {
+        color: #1b3a57;
+        font-size: 25;
+        font-weight: 500;
+    }
+
+    .input-field{
+        margin: 15 0;
+        Label{
+            padding-left: 5;
+            font-size: 13;
+            color: #aaa;
+        }
+        TextField, .text-field{
+            padding-top: 10;
+            padding-left: 5;
+            padding-right: 0;
+            padding-bottom: 10;
+            text-indent: 5;
+            border-bottom-width: 0.5;
+            border-color: #eee;
+            font-size: 15;
+        }
+
+        Button{
+            background-color: #333;
+            color: #fff;
+        }
+    }
+}
+.addr-field{
+    .zipcode{
+        width: 150;
+        margin-right: 20;
+    }
+    .btn-search{
+        height: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    .addr1{
+        padding-top: 10;
+        padding-left: 5;
+        padding-right: 0;
+        padding-bottom: 10;
+        text-indent: 5;
+        border-bottom-width: 0.5;
+        border-color: #eee;
+        font-size: 15;
+        margin-right: 10;
+    }
+}
+.out-container{
+    height: 100;
+    vertical-align: center;
+    background-color: #f6f6f6;
+    Label:first-of-type{
+        border-right-width: 0.5;
+        border-color: #aaa;
+    }
+    * {
+        text-align: center;
+        vertical-align: middle;
+    }
+}
