toast 추가 	modified:   src/app/home/personal/mypage/info/info.component.tns.html 	modified:   src/app/home/personal/mypage/info/info.component.tns.scss 	modified:   src/app/home/personal/mypage/info/info.component.tns.ts

--- a/src/app/home/personal/mypage/info/info.component.tns.html
+++ b/src/app/home/personal/mypage/info/info.component.tns.html
@@ -1,11 +1,25 @@
+<AbsoluteLayout [ngClass]="[toasted === 'show' ? 'show-toast' : 'hide-toast']" horizontalAlignment="center">
+    <StackLayout class="toast-bar">
+        <Label text="저장되었습니다"></Label>
+    </StackLayout>
+</AbsoluteLayout>
 <GridLayout>
     <ScrollView>
         <StackLayout>
             <StackLayout class="info-container">
                 <Label text="기본정보"></Label>
                 <StackLayout class="input-field">
+                    <Label text="비밀번호"></Label>
+                    <Button text="비밀번호 변경"></Button>
+                </StackLayout>
+                <StackLayout class="input-field">
                     <Label text="이름"></Label>
                     <TextField hint="이름" [(ngModel)]="user.MemNm"></TextField>
+                </StackLayout>
+                <StackLayout class="input-field">
+                    <Label text="전화번호"></Label>
+                    <Label text="{{ user.Mobile }}" class="text-field"></Label>
+                    <Button text="전화번호 변경"></Button>
                 </StackLayout>
                 <StackLayout class="input-field">
                     <Label text="이메일"></Label>
@@ -14,15 +28,6 @@
                 <StackLayout class="input-field">
                     <Label text="협약사코드"></Label>
                     <TextField hint="코드" [(ngModel)]="user.ContractCode"></TextField>
-                </StackLayout>
-                <StackLayout class="input-field">
-                    <Label text="비밀번호"></Label>
-                    <Button text="비밀번호 변경"></Button>
-                </StackLayout>
-                <StackLayout class="input-field">
-                    <Label text="전화번호"></Label>
-                    <Label text="{{ user.Mobile }}" class="text-field"></Label>
-                    <Button text="전화번호 변경"></Button>
                 </StackLayout>
                 <!-- <StackLayout class="input-field addr-field">
                     <Label text="주소"></Label>
@@ -35,6 +40,9 @@
                         <TextField hint="상세주소" col="1"></TextField>
                     </GridLayout>
                 </StackLayout> -->
+                <StackLayout horizontalAlignment="center" class="submit-container">
+                    <Button text="저장" class="btn-submit" (tap)="doSubmit()"></Button>
+                </StackLayout>
             </StackLayout>
             <GridLayout columns="*, *" class="out-container">
                 <Label text="로그아웃" col="0" (tap)="signOut()"></Label>
