--- a/src/app/home/personal/mypage/info/info.component.tns.scss
+++ b/src/app/home/personal/mypage/info/info.component.tns.scss
@@ -1,4 +1,5 @@
 /* Add mobile styles for the component here.  */
+
 .info-container{
     padding: 20;
     margin-bottom: 50;
@@ -29,6 +30,15 @@
         Button{
             background-color: #333;
             color: #fff;
+        }
+    }
+
+    .submit-container{
+        margin-top: 20;
+        .btn-submit{
+            background-color: #333;
+            color: #fff;
+            padding: 20 50;
         }
     }
 }
@@ -65,5 +75,36 @@
     * {
         text-align: center;
         vertical-align: middle;
+    }
+}
+
+@keyframes toast-show{
+    0%{opacity: 0;}
+    10% {opacity: 1;}
+    80% { opacity: 1; }
+    100% {opacity: 0;}
+}
+
+.show-toast{
+    z-index: 99;
+    opacity: 0;
+    animation-name: toast-show;
+    animation-duration: 3;
+}
+
+.hide-toast{
+    opacity: 0;
+}
+
+.toast-bar{
+    height: 40;
+    width: 300;
+    background-color: #444;
+    border-radius: 5;
+    margin-top: 10;
+    vertical-align: middle;
+    Label{
+        color: #fff;
+        text-align: center;
     }
 }
