--- a/src/app/home/personal/mypage/mybooking/mybooking.component.tns.scss
+++ b/src/app/home/personal/mypage/mybooking/mybooking.component.tns.scss
@@ -1,1 +1,59 @@
 /* Add mobile styles for the component here.  */
+.content-container{
+}
+.row_0{
+    padding: 20;
+    > Label {
+        font-size: 30;
+        color: #1b3a57;
+    }
+    .info-container{
+        padding: 15;
+        border-width: 0.5;
+        border-color: #aaa;
+
+        .title{
+            font-weight: bold;
+            margin-bottom: 10;
+        }
+    }
+}
+
+.resv-container{
+    padding: 20;
+    border-width: 0.5;
+    border-color: #aaa;
+    border-radius: 10;
+    box-shadow: 0px 0px 20px 0px #ddd;
+    margin: 10 20;
+    .resv-top{
+        border-bottom-width: 0.5;
+        border-color: #aaa;
+        padding-bottom: 20;
+        margin-bottom: 20;
+        .resv-stat{}
+        .resv-detail{
+            text-align: right;
+        }
+    }
+    .resv-body{
+        .resv-photo{
+            width: 100;
+            height: 100;
+            margin-right: 20;
+            border-width: 0.5;
+            border-color: #aaa;
+            border-radius: 10;
+        }
+        .resv-info{
+            .resv-acom{
+                font-size: 18;
+                color: #333;
+            }
+            .resv-room{
+                margin-bottom: 5;
+            }
+            .resv-date{}
+        }
+    }
+}
