숙소정보 수정

--- a/src/app/home/unit-list/unit-list.component.html
+++ b/src/app/home/unit-list/unit-list.component.html
@@ -178,7 +178,7 @@
     </section>
 
     <section id="sec_guide" *ngIf="selectedMenu === 'accom'">
-        <div class="content info_list_deco_disc" *ngIf="accomInfo">
+        <div class="content" *ngIf="accomInfo">
             <div class="info_wrap">
                 <div>
                     <h3>기본 정보</h3>
