--- a/src/app/home/unit-list/unit-list.component.scss
+++ b/src/app/home/unit-list/unit-list.component.scss
@@ -1,7 +1,7 @@
 @import '/src/assets/var';
 #main { margin-top: 150px; }
 
-/** sec_reserv_info **/
+/** 객실정보/예약 **/
 #sec_reserv_info {
     .reserv_field {
         margin: 40px 0;
@@ -58,7 +58,27 @@
     }
 }
 
-/** review list **/
+/** 숙소정보 **/
+#sec_guide {
+    .info_wrap {
+        max-width: 600px;
+        margin: 0 auto;
+        h3 {
+            margin: 20px 0 10px 0;
+            padding: 5px 10px;
+            background: #f7f7f7;
+            color: #666;
+        }
+        ul {
+            padding: 10px;
+            li {
+                margin-bottom: 5px;
+            }
+        }
+    }
+}
+
+/** 리뷰 **/
 .rv_write {
     border-bottom: $gray_border;
     textarea {
@@ -180,29 +200,6 @@
         border-bottom: 0;
     }
 }
-
-// .accom_info_top{
-//     &> div {
-//         display: inline-block;
-//     }
-//     .image_area{
-//         width: 50%;
-//     }
-//     .info_area{
-//         width: 50%;
-//         height: 100%;
-//         position: relative;
-//         padding: 20px 0;
-//         &> div{
-//             width: 100%;
-//             height: 100%;
-//             padding-left: 50px;
-//             h2{
-//                 margin: 0;
-//             }
-//         }
-//     }
-// }
 
 .accom_info_top {
     & > div {
