image picker 기능 추가 	modified:   package-lock.json 	modified:   package.json 	modified:   src/app/home/unit-list/unit-list.component.tns.html 	modified:   src/app/home/unit-list/unit-list.component.tns.ts

--- a/src/app/home/unit-list/unit-list.component.tns.html
+++ b/src/app/home/unit-list/unit-list.component.tns.html
@@ -116,13 +116,13 @@
                     </StackLayout>
                 </StackLayout>
                 <StackLayout *ngIf="selectedMenu === 1">
-                    <Label text="info"></Label>
+                    <ns-accom-info [id]="srch.AcomId"></ns-accom-info>
                 </StackLayout>
                 <StackLayout *ngIf="selectedMenu === 2">
-                    <Label text="inquire"></Label>
+                    <ns-inquiry [id]="srch.AcomId"></ns-inquiry>
                 </StackLayout>
                 <StackLayout *ngIf="selectedMenu === 3">
-                    <Label text="review"></Label>
+                    <ns-review [id]="srch.AcomId"></ns-review>
                 </StackLayout>
             </StackLayout>
         </StackLayout>
