--- a/src/app/shared/modal/img-viewer/img-viewer.component.tns.scss
+++ b/src/app/shared/modal/img-viewer/img-viewer.component.tns.scss
@@ -1,1 +1,9 @@
 /* Add mobile styles for the component here.  */
+.modal-container{
+    height: 400;
+    max-width: 500;
+}
+.btn-close{
+    background-color: #777;
+    width: 100;
+}
