--- a/src/app/home/unit-list/tab/review/review.component.tns.html
+++ b/src/app/home/unit-list/tab/review/review.component.tns.html
@@ -16,10 +16,10 @@
                         <!-- <Button appMobileFileAttach text="사진추가" (onUploaded)="getFiles($event)"></Button> -->
                     </StackLayout>
                     <StackLayout col="1" class="photo-box" *ngIf="uploadFileList.length > 0"
-                        (tap)="openImageViewer()">
+                        (tap)="openImageViewer(uploadFileList, 1)">
                         <Image [src]="uploadFileList[0].link" stretch="aspectFill"></Image>
                     </StackLayout>
-                    <StackLayout col="2" class="btn-submit" horizontalAlignment="right">
+                    <StackLayout col="2" class="btn-submit" horizontalAlignment="right" (tap)="reviewReg()">
                         <Label text="등록"></Label>
                     </StackLayout>
                 </GridLayout>
@@ -32,14 +32,13 @@
                         <Label text="{{ item.stars }}" col="1" class="stars"></Label>
                         <Label text="{{ item.RegDate | customdate : 'yyyy.mm.dd' }}" col="2" class="reg-date"></Label>
                         <GridLayout columns="auto, auto" col="3" class="btn-group-action" horizontalAlignment="right">
-                            <Label text="수정" col="0"></Label>
-                            <Label text="삭제" col="1"></Label>
-                            <Label text="답글" col="1"></Label>
+                            <Label text="삭제" col="1" *ngIf="user && user.MemId === item.MemId" (tap)="reviewDel(item)"></Label>
+                            <!-- <Label text="답글" col="1"></Label> -->
                         </GridLayout>
                     </GridLayout>
                     <GridLayout columns="auto, *">
                         <StackLayout col="0" class="photo-box" *ngIf="item.uploadfileList.length > 0"
-                            (tap)="openImageViewer()">
+                            (tap)="openImageViewer(item.uploadfileList, 0)">
                             <Image [src]="item.uploadfileList[0].link" stretch="aspectFill" width="80"></Image>
                         </StackLayout>
                         <Label [text]="item.Contents" textWrap="true" col="1" class="content-text"></Label>
